<resources>
    <string name="app_name">ACalculator</string>
    <string name="zero">0</string>
    <string name="zero_zero">00</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="adicionar">+</string>
    <string name="subtrair">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="ponto">.</string>
    <string name="clear">C</string>
    <string name="apagar_ultimo">&lt;</string>
    <string name="equals">=</string>
    <string name="historico">Histórico</string>
    <string name="memoria">Sem cálculos em memória</string>
    <string name="historico_activity2">Histórico de cálculos"</string>
    <string name="back">BACK"</string>

    <!--Drawer-->
    <string name="calculator">Calculadora</string>
    <string name="history">Histórico</string>
    <string name="other">Outros</string>
    <string name="sign_out">Sair</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
