<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_historico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/lightgray"
        android:padding="16dp"
        android:text="@string/memoria"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text_visor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/lightgray"
        android:padding="32dp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">


            <Button
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/gray"
                android:tag="@string/clear"
                android:text="@string/clear"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_apagarUltimo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/gray"
                android:tag="@string/apagar_ultimo"
                android:text="@string/apagar_ultimo"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_dividir"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:tag="@string/dividir"
                android:text="@string/dividir"
                android:textColor="@color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/sete"
                android:text="@string/sete"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/oito"
                android:text="@string/oito"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/nove"
                android:text="@string/nove"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_multiplicar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:tag="@string/multiplicar"
                android:text="@string/multiplicar"
                android:textColor="@color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/quatro"
                android:text="@string/quatro"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/cinco"
                android:text="@string/cinco"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/seis"
                android:text="@string/seis"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_subtrair"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:tag="@string/subtrair"
                android:text="@string/subtrair"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/um"
                android:text="@string/um"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/dois"
                android:text="@string/dois"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/tres"
                android:text="@string/tres"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_adition"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:tag="@string/adicionar"
                android:text="@string/adicionar"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/zero"
                android:text="@string/zero"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_ponto"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/darkGray"
                android:tag="@string/ponto"
                android:text="@string/ponto"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/equals"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>